[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/game2/Object/Moon.gd" type="Script" id=1]
[ext_resource path="res://sound/fx/ouch.wav" type="AudioStream" id=2]
[ext_resource path="res://art/moon/moon-swollow.png" type="Texture" id=3]
[ext_resource path="res://art/moon/moon_bg.png" type="Texture" id=4]
[ext_resource path="res://art/moon/moon_blush.png" type="Texture" id=5]
[ext_resource path="res://Scenes/game2/Object/Moon_drunk.shader" type="Shader" id=6]
[ext_resource path="res://art/UI/dialog_arrow.png" type="Texture" id=7]
[ext_resource path="res://art/UI/dialog_body.png" type="Texture" id=8]
[ext_resource path="res://effects/ghost.gd" type="Script" id=9]
[ext_resource path="res://fonts/Welbut__.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://effects/matrix.gd" type="Script" id=11]
[ext_resource path="res://effects/pulse.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 15.2628

[sub_resource type="Animation" id=2]
resource_name = "hitted"

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )
shader_param/changeColorRatio = 1.0
shader_param/upsideDown = null
shader_param/colorTense = null

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blush:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.00650968, 0.167881, 0.393121 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bg:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.167881, 0.389496 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("face:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.167881, 0.393121 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 1.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("face:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bg:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}

[sub_resource type="DynamicFont" id=9]
use_mipmaps = true
font_data = ExtResource( 10 )

[sub_resource type="RichTextEffect" id=10]
script = ExtResource( 9 )

[sub_resource type="RichTextEffect" id=11]
script = ExtResource( 11 )

[sub_resource type="RichTextEffect" id=12]
script = ExtResource( 12 )

[node name="Moon" type="Area2D" groups=[
"player",
]]
scale = Vector2( 2, 1.93955 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.105452, 0.0669527 )
z_index = 10
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hitted = SubResource( 2 )

[node name="hold_item_position" type="Position2D" parent="."]
position = Vector2( -0.0208569, -14.3732 )

[node name="hold_item_position_next" type="Position2D" parent="."]
position = Vector2( 0.0039463, -16.8039 )

[node name="FaceResetTimer" type="Timer" parent="."]
one_shot = true

[node name="bg" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, 0.604493 )
texture = ExtResource( 4 )

[node name="blush" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="face" type="Sprite" parent="."]
position = Vector2( 0, 0.604493 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="faceAnimationPlayer" type="AnimationPlayer" parent="."]
anims/beHit = SubResource( 4 )
anims/hit = SubResource( 5 )
anims/normal_blink = SubResource( 6 )
anims/normal_rotation = SubResource( 7 )
anims/normal_sleep = SubResource( 8 )

[node name="ThunderTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="dialog" type="Node2D" parent="."]
visible = false
position = Vector2( 10.3943, 0.165333 )

[node name="dialog_body" type="Sprite" parent="dialog"]
position = Vector2( 1.38818, -30.8911 )
scale = Vector2( 2.2, 1 )
texture = ExtResource( 8 )

[node name="dialog_arrow" type="Sprite" parent="dialog"]
position = Vector2( -10.013, -18 )
texture = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="dialog"]
scale = Vector2( 0.5, 0.5 )

[node name="moon_chat" type="RichTextLabel" parent="dialog/Node2D"]
margin_left = -112.0
margin_top = -86.0
margin_right = 116.0
margin_bottom = -39.0
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[matrix clean=2.0 dirty=0.3 span=1]where am i? hello little ants i love you~~"
text = "where am i? hello little ants i love you~~"
custom_effects = [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moon_chat_timer" type="Timer" parent="dialog/Node2D"]
wait_time = 4.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 12.0
[connection signal="area_entered" from="." to="." method="_on_Moon_area_entered"]
[connection signal="timeout" from="FaceResetTimer" to="." method="_on_FaceResetTimer_timeout"]
[connection signal="timeout" from="ThunderTimer" to="." method="_on_ThunderTimer_timeout"]
[connection signal="timeout" from="dialog/Node2D/moon_chat_timer" to="." method="_on_moon_chat_timer_timeout"]
